--- a/src/main.scss
+++ b/src/main.scss
@@ -14,44 +14,12 @@ $font-family: 'Roboto, "Open Sans", "Helvetica Neue", sans-serif';
   color: #0077b5;
 }
 
-//.fa-map-marked {
-//    color: $link-color;
-//}
-
-//* {
-//  box-sizing: border-box;
-//}
+@import "scrollbar";
 
 ::selection {
   background-color: rgba(darken($primary-color, 10%), .6);
   text-shadow: none;
   color: #fff;
-}
-
-::-webkit-scrollbar {
-  background: transparentize(#dadce0, .8);
-  height: 8px;
-  width: 8px
-}
-
-::-webkit-scrollbar-thumb {
-  border: none;
-  box-shadow: none;
-  background: #dadce0;
-  //border-radius: 8px;
-  min-height: 40px;
-}
-
-:hover::-webkit-scrollbar-thumb {
-  background: #bdc1c6
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background: #bdc1c6
-}
-
-::-webkit-scrollbar-thumb:active {
-  background: #80868b
 }
 
 html {
@@ -63,10 +31,14 @@ body {
   margin: 0;
   padding: 0;
 
-  background: rgb(204, 204, 204);
+  background-color: rgb(204, 204, 204);
 
   font: normal normal 400 12pt/1.2 $font-family;
   color: $text-color;
+
+  @media print {
+    background-color: #fff;
+  }
 }
 
 page {
@@ -75,14 +47,12 @@ page {
   margin: 0.5cm auto 0;
   padding: 1cm;
 
-  &[size="A4"] {
-    width: 21cm;
-    height: 29.7cm;
-
-    &[layout="landscape"] {
-      width: 29.7cm;
-      height: 21cm;
-    }
+  // A4
+  width: 21cm;
+  height: 29.7cm;
+  &[layout="landscape"] {
+    width: 29.7cm;
+    height: 21cm;
   }
 
   background: #fff;
@@ -91,9 +61,10 @@ page {
   overflow: auto;
 
   @media print {
-    margin: 0;
-    box-shadow: none;
-    overflow: visible;
+    margin: 0 !important;
+    padding: 0 !important;
+    box-shadow: none !important;
+    overflow: visible !important;
   }
 }
 
