--- a/src/main.scss
+++ b/src/main.scss
@@ -39,8 +39,8 @@ body {
   margin: 0;
   padding: 0;
 
-  width: calc(100vw - #{$scrollbar-width});
-  height: calc(100vh - #{$scrollbar-width});
+  width: 100vw;
+  height: 100vh;
 
   overflow: auto;
 
