--- a/src/main.scss
+++ b/src/main.scss
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 $scrollbar-width: 8px;
-$primary-color: darken(#4682b4, 5%); // steelblue
+$primary-color: #2079c7; // steelblue
 $text-color: #333;
 $link-color: $text-color;
 $background-color: #f5f5f5;
@@ -9,7 +9,7 @@ $background-color: #f5f5f5;
 $a4-width: 21cm;
 $a4-height: 29.7cm;
 
-$font-family: 'Roboto, "Open Sans", "Helvetica Neue", sans-serif';
+$font-family: 'Roboto, RobotoDraft, "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif';
 
 @import "webfonts";
 
@@ -44,7 +44,7 @@ body {
 
   overflow: auto;
 
-  font: normal normal 400 12pt/1.2 $font-family;
+  font: normal normal 400 9pt/1.2 $font-family;
   color: $text-color;
 
   @media screen and (min-width: $a4-width) {
@@ -75,7 +75,7 @@ page {
     padding: 1cm;
 
     width: $a4-width;
-    height: $a4-height;
+    min-height: $a4-height;
     box-shadow: 0 0 0.5cm rgba(0, 0, 0, 0.5);
   }
 
@@ -96,7 +96,7 @@ header {
 
   background-color: #fff;
 
-  color: $primary-color;
+  color: #000;
 
   box-decoration-break: clone;
   transition: all 250ms;
@@ -114,6 +114,10 @@ header {
       color: #fff;
       background-color: $primary-color;
       box-shadow: 0 3px 10px -3px rgba(0, 0, 0, .5);
+
+      span {
+        visibility: hidden;
+      }
     }
   }
 }
@@ -125,10 +129,9 @@ h1 {
   line-height: .8;
   font-size: 8vw;
   color: inherit;
-  text-transform: uppercase;
 
   @media screen and (min-width: $a4-width) {
-    font-size: 3rem;
+    font-size: 3.5rem;
   }
 }
 
@@ -136,19 +139,19 @@ h2 {
   margin: .5rem 0 1rem;
 
   font-weight: 700;
-  font-size: 1.3rem;
+  font-size: 1rem;
   line-height: 1;
   text-transform: uppercase;
   color: $primary-color;
-  border-bottom: 2px solid $primary-color;
 }
 
 h3 {
   margin: .5rem 0 .5rem;
 
+  color: #000;
   font-weight: 600;
-  font-size: 1rem;
-  line-height: .9;
+  font-size: 1.2rem;
+  line-height: 1;
 }
 
 //h1 {
@@ -182,6 +185,13 @@ section {
   display: flex;
   flex-direction: column;
   margin-top: 2rem;
+
+  color: lighten($text-color, 30%);
+  font-size: 1rem;
+
+  break-inside: avoid;
+  page-break-inside: avoid;
+
 }
 
 ol {
@@ -199,7 +209,9 @@ ol {
 
 ul {
   margin: 0;
-  padding-left: 1.5em;
+  padding-left: 1em;
+
+  color: lighten($text-color, 30%);
 
   li {
     padding: .1rem 0;
@@ -217,6 +229,21 @@ p {
 }
 
 article {
+
+  div {
+    padding-bottom: .5rem;
+  }
+
+  small {
+    color: lighten($text-color, 30%);
+    font-weight: 400;
+  }
+
+  time {
+    font-size: .8rem;
+    text-transform: uppercase;
+  }
+
   + article {
     margin-top: 1rem;
   }
